--- a/src/Slider/style.css
+++ b/src/Slider/style.css
@@ -1,16 +1,18 @@
-.slider-container {
+.sliderContainer {
   width: 100%;
   white-space: nowrap;
   overflow: hidden;
 }
 
-.slider-page {
+.sliderPage {
   width: 100%;
   white-space: nowrap;
   display: inline-block;
+  vertical-align: top;
+  overflow: hidden;
 }
 
-.slider-item {
+.sliderItem {
   display: inline-block;
   box-sizing: border-box;
   vertical-align: middle;
